<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollViewMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/NameOfTheTest"
                    style="@style/NameOfTheTest"
                    android:text="@string/name_of_the_test" />

                <View
                    android:id="@+id/line1"
                    style="@style/line" />

                <TextView
                    android:id="@+id/introduction"
                    style="@style/introduction"
                    android:text="@string/introduction" />

                <View
                    android:id="@+id/line2"
                    style="@style/line" />

                <EditText
                    android:id="@+id/name"
                    style="@style/editText"
                    android:hint="@string/please_enter_your_name"
                    android:lines="1"
                    android:maxLines="1" />

                <Button
                    android:id="@+id/letsGo"
                    style="@style/button"
                    android:onClick="letsGo"
                    android:text="@string/let_s_go" />

                <Button
                    android:id="@+id/start"
                    style="@style/button"
                    android:onClick="startTest"
                    android:text="@string/start_a_test"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/question_1"
                    style="@style/question"
                    android:text="@string/question_1"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/comment"
                    style="@style/comment"
                    android:text="@string/comment"
                    android:visibility="gone" />

                <View
                    android:id="@+id/line3"
                    style="@style/line"
                    android:visibility="gone" />

                <RadioGroup
                    android:id="@+id/rd"
                    style="@style/rd"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/answer1_1"
                        style="@style/radioButton"
                        android:onClick="click"
                        android:text="@string/answer1_1" />

                    <RadioButton
                        android:id="@+id/answer1_2"
                        style="@style/radioButton"
                        android:onClick="click"
                        android:text="@string/answer1_2" />

                    <RadioButton
                        android:id="@+id/answer1_3"
                        style="@style/radioButton"
                        android:onClick="click"
                        android:text="@string/answer1_3" />

                    <RadioButton
                        android:id="@+id/answer1_4"
                        style="@style/radioButton"
                        android:onClick="click"
                        android:text="@string/answer1_4" />

                </RadioGroup>

                <View
                    android:id="@+id/line4"
                    style="@style/line"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/submit_radio_button"
                    style="@style/button"
                    android:onClick="submit_radio_button"
                    android:text="@string/submit_my_answer"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/reaction"
                    style="@style/reaction"
                    android:layout_marginTop="80dp"
                    android:text="@string/reaction"
                    android:visibility="gone" />

                <View
                    android:id="@+id/line5"
                    style="@style/line"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/answer4_1"
                    style="@style/radioButton"
                    android:text="@string/answer4_1"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/answer4_2"
                    style="@style/radioButton"
                    android:text="@string/answer4_2"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/answer4_3"
                    style="@style/radioButton"
                    android:text="@string/answer4_3"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/answer4_4"
                    style="@style/radioButton"
                    android:text="@string/answer4_4"
                    android:visibility="gone" />

                <View
                    android:id="@+id/line6"
                    style="@style/line"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/submit_check_box"
                    style="@style/button"
                    android:onClick="submit_check_box"
                    android:text="@string/submit_my_answer"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/answer_7"
                    style="@style/editText"
                    android:layout_marginTop="10dp"
                    android:hint="@string/please_enter_c_or_i"
                    android:lines="1"
                    android:maxLines="1"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/submit_edit_text"
                    style="@style/button"
                    android:onClick="submit_edit_text"
                    android:text="@string/submit_my_answer"
                    android:visibility="gone" />

                <RelativeLayout
                    android:id="@+id/relative_layout_score"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="40dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/your_score"
                        style="@style/yourScore"
                        android:layout_alignParentLeft="true"
                        android:text="@string/your_score" />

                    <TextView
                        android:id="@+id/display_score"
                        style="@style/score"
                        android:layout_alignParentRight="true"
                        android:text="@string/score" />
                </RelativeLayout>

                <View
                    android:id="@+id/line7"
                    style="@style/line"
                    android:visibility="gone" />

                <RelativeLayout
                    android:id="@+id/relative_layout_questions_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="40dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/question_left"
                        style="@style/yourScore"
                        android:layout_alignParentLeft="true"
                        android:text="@string/questions_left" />

                    <TextView
                        android:id="@+id/display_questions_left"
                        style="@style/score"
                        android:layout_alignParentRight="true"
                        android:text="@string/display_questions_left" />
                </RelativeLayout>

                <View
                    android:id="@+id/line8"
                    style="@style/line"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/next"
                    style="@style/button"
                    android:onClick="updateQuestion"
                    android:text="@string/next_question"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/solution"
                    style="@style/button"
                    android:onClick="solution"
                    android:text="@string/get_result"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/share"
                    style="@style/share"
                    android:onClick="share"
                    android:text="@string/share_your_result_with_friends"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/reset"
                    style="@style/reset"
                    android:onClick="reset"
                    android:text="@string/try_again"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/yourResult"
                    style="@style/result"
                    android:text="@string/result1"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>